--- a/katsdpfilewriter/requirements.txt
+++ b/katsdpfilewriter/requirements.txt
@@ -1,7 +1,21 @@
+Cython
 h5py
-numpy
+funcsigs
 katcp
+numpy
+linecache2
 manhole
-spead2>=0.3.0
-git+ssh://git@github.com/ska-sa/katsdptelstate
+mock
+netifaces
+nose
+pbr
+ply
+ProxyTypes
+six
+spead2
 redis
+traceback2
+Twisted
+unittest2
+zope.interface
+git+ssh://git@github.com/ska-sa/katsdptelstate
