Start daemon from docker file

--- a/katsdptransfer/Dockerfile
+++ b/katsdptransfer/Dockerfile
@@ -6,3 +6,7 @@ MAINTAINER Thomas Bennett "tbennett@ska.ac.za"
 COPY . /tmp/install/katsdptransfer
 WORKDIR /tmp/install/katsdptransfer
 RUN python ./setup.py clean && pip install --no-index .
+
+VOLUME ["/var/kat/data/staging"]
+
+RUN sun_store_transfer_daemon.py
