Use a higher level directory so that on_success can be used

--- a/katsdptransfer/Dockerfile
+++ b/katsdptransfer/Dockerfile
@@ -7,4 +7,8 @@ COPY . /tmp/install/katsdptransfer
 WORKDIR /tmp/install/katsdptransfer
 RUN python ./setup.py clean && pip install --no-index .
 
-VOLUME ["/var/kat/data/staging"]
+VOLUME ["/var/kat/data"]
+
+#--path /var/kat/data/staging
+#--on_success /var/kat/data/success
+
