--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,24 @@
-pysolr==3.2.0
+six
+Cython
+h5py
+pyephem
+numpy
+git+ssh://git@github.com/ska-sa/katpoint
+git+ssh://git@github.com/ska-sa/katdal
+
+pysolr==3.3.3
+requests==2.0
+
+unittest2
+traceback2
+linecache2
+ProxyTypes
+ply
+nose
+twisted
+zope.interface
+mock
+funcsigs
+pbr
+katcp
+
