New katversion requirement

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+
 six
 Cython
 h5py
@@ -5,6 +6,7 @@ pyephem
 numpy
 git+ssh://git@github.com/ska-sa/katpoint
 git+ssh://git@github.com/ska-sa/katdal
+git+ssh://git@github.com/ska-sa/katversion
 
 pysolr==3.3.3
 requests==2.0
