--- a/katsdpfilewriter/requirements.txt
+++ b/katsdpfilewriter/requirements.txt
@@ -31,4 +31,4 @@ traceback2
 tornado
 unittest2
 git+ssh://git@github.com/ska-sa/katsdpservices
-git+ssh://git@github.com/ska-sa/katsdptelstate@namespace-underscore#egg=katsdptelstate
+git+ssh://git@github.com/ska-sa/katsdptelstate
