--- a/katsdpfilewriter/requirements.txt
+++ b/katsdpfilewriter/requirements.txt
@@ -23,12 +23,13 @@ pbr
 pkginfo
 ply
 pyephem
+redis
 singledispatch
 six
 spead2
-redis
-traceback2
 tornado
+traceback2
+trollius
 unittest2
 git+ssh://git@github.com/ska-sa/katsdpservices
 git+ssh://git@github.com/ska-sa/katsdptelstate
