--- a/katsdpfilewriter/requirements.txt
+++ b/katsdpfilewriter/requirements.txt
@@ -2,13 +2,13 @@ backports-abc
 backports.ssl-match-hostname
 certifi
 Cython
+dask==0.17
 h5py
 fakenewsredis
 funcsigs
 future
 futures
 katcp
-katdal==0.8
 katpoint==0.7
 katversion
 hiredis
@@ -27,9 +27,11 @@ redis
 singledispatch
 six
 spead2
+toolz==0.9.0
 tornado
 traceback2
 trollius
 unittest2
+git+ssh://git@github.com/ska-sa/katdal
 git+ssh://git@github.com/ska-sa/katsdpservices
 git+ssh://git@github.com/ska-sa/katsdptelstate
