Refined requirements and setup file

--- a/katsdpmetawriter/requirements.txt
+++ b/katsdpmetawriter/requirements.txt
@@ -1,35 +1,10 @@
 aiokatcp==0.2
-argparse==1.2.1
-backports-abc
-backports.ssl-match-hostname
 boto==2.48.0
-certifi
-coverage==3.7.1
-fakenewsredis
-funcsigs
-future
-futures
-katversion
-hiredis
-httpretty==0.7.0
-ipaddress
-linecache2
-mock
-netifaces
-nose
-numpy
-paramiko==1.10.0
-pbr
-pkginfo
-ply
-PyYAML==3.10
-redis
-requests==1.2.3
-rsa==3.1.4
-simplejson==3.6.5
-singledispatch
-six
-traceback2
-unittest2
+decorator==4.2.1          # via aiokatcp
+fakenewsredis==0.10.0
+ipaddress==1.0.19
+netifaces==0.10.6
+numpy==1.14.1
+redis==2.10.6             # via fakenewsredis
 git+ssh://git@github.com/ska-sa/katsdptelstate#egg=katsdptelstate
 git+ssh://git@github.com/ska-sa/katsdpservices#egg=katsdpservices
