Add pygelf to requirements.txt to prepare for ska-sa/katsdpservices#10

--- a/katsdpmetawriter/requirements.txt
+++ b/katsdpmetawriter/requirements.txt
@@ -7,6 +7,7 @@ ipaddress
 katversion
 netifaces
 numpy
+pygelf
 redis                     # via fakeredis
 git+ssh://git@github.com/ska-sa/katsdptelstate#egg=katsdptelstate
 git+ssh://git@github.com/ska-sa/katsdpservices#egg=katsdpservices
