--- a/katsdpfilewriter/requirements.txt
+++ b/katsdpfilewriter/requirements.txt
@@ -1,15 +1,13 @@
 backports-abc
 backports.ssl-match-hostname
 certifi
-Cython
-dask==0.17
+dask
 h5py
 fakeredis
 funcsigs
 future
 futures
 katcp
-katpoint==0.7
 katversion
 hiredis
 ipaddress
@@ -20,7 +18,6 @@ netifaces
 nose
 numpy
 pbr
-pkginfo
 ply
 pyephem
 pygelf
@@ -28,11 +25,13 @@ redis
 singledispatch
 six
 spead2
-toolz==0.9.0
+toolz
 tornado
 traceback2
 trollius
 unittest2
+
+git+ssh://git@github.com/ska-sa/katpoint
 git+ssh://git@github.com/ska-sa/katdal
 git+ssh://git@github.com/ska-sa/katsdpservices
 git+ssh://git@github.com/ska-sa/katsdptelstate
