--- a/katsdpfilewriter/requirements.txt
+++ b/katsdpfilewriter/requirements.txt
@@ -8,6 +8,8 @@ funcsigs
 future
 futures
 katcp
+katdal==0.9.5
+katpoint==0.7
 katversion
 hiredis
 ipaddress
@@ -21,8 +23,6 @@ pbr
 ply
 pyephem
 pygelf
-python-lzf
-rdbtools
 redis
 singledispatch
 six
@@ -33,7 +33,5 @@ traceback2
 trollius
 unittest2
 
-git+ssh://git@github.com/ska-sa/katpoint
-git+ssh://git@github.com/ska-sa/katdal
 git+ssh://git@github.com/ska-sa/katsdpservices
 git+ssh://git@github.com/ska-sa/katsdptelstate
