Switch sub-packages to multi-stage builds
This is implemented for katsdpfilewriter, katsdpflagwriter,
katsdpmetawriter. It is not done for the top-level Dockerfile, which is
not part of the master controller-launched images.

--- a/katsdpmetawriter/Dockerfile
+++ b/katsdpmetawriter/Dockerfile
@@ -1,17 +1,26 @@
-FROM sdp-docker-registry.kat.ac.za:5000/docker-base
-
+FROM sdp-docker-registry.kat.ac.za:5000/docker-base-build as build
 MAINTAINER Simon Ratcliffe "simonr@ska.ac.za"
 
 # Switch to Python 3 environment
 ENV PATH="$PATH_PYTHON3" VIRTUAL_ENV="$VIRTUAL_ENV_PYTHON3"
 
 # Install dependencies
-COPY requirements.txt /tmp/install/requirements.txt
+COPY --chown=kat:kat requirements.txt /tmp/install/requirements.txt
 RUN install-requirements.py -d ~/docker-base/base-requirements.txt -r /tmp/install/requirements.txt
 
 # Install the current package
-COPY . /tmp/install/katsdpmetawriter
+COPY --chown=kat:kat . /tmp/install/katsdpmetawriter
 WORKDIR /tmp/install/katsdpmetawriter
-RUN python ./setup.py clean && pip install --no-deps . && pip check
+RUN python ./setup.py clean
+RUN pip install --no-deps .
+RUN pip check
+
+#######################################################################
+
+FROM sdp-docker-registry.kat.ac.za:5000/docker-base-runtime
+MAINTAINER Simon Ratcliffe "simonr@ska.ac.za"
+
+COPY --from=build --chown=kat:kat /home/kat/ve3 /home/kat/ve3
+ENV PATH="$PATH_PYTHON3" VIRTUAL_ENV="$VIRTUAL_ENV_PYTHON3"
 
 EXPOSE 2049
