--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,14 @@ Cython
 h5py
 pyephem
 numpy
+
+git+ssh://git@github.com/ska-sa/katsdptelstate
+git+ssh://git@github.com/ska-sa/katsdpservices
+git+ssh://git@github.com/ska-sa/katversion
+
+katdal==0.10.1
+
 git+ssh://git@github.com/ska-sa/katpoint
-#git+ssh://git@github.com/ska-sa/katdal
 git+ssh://git@github.com/ska-sa/katversion
 git+ssh://git@github.com/ska-sa/katsdptelstate
 git+ssh://git@github.com/ska-sa/katsdpservices
