Build psrchive from docker-base-gpu-build
Because the new docker-base-gpu-build image doesn't activate a specific
Python ve itself, added ENV commands to do so.

Note that docker-base-gpu-build has some upgrades, particularly to pip
10 and CUDA 9.1 that may affect things. I've tested that this compiles,
but not that it works since I don't know how to use it.

--- a/psrchive/Dockerfile
+++ b/psrchive/Dockerfile
@@ -6,7 +6,7 @@
 # inform receipients that you have modified the original work.
 
 
-FROM sdp-docker-registry.kat.ac.za:5000/docker-base-gpu:latest
+FROM sdp-docker-registry.kat.ac.za:5000/docker-base-gpu-build:latest
 
 
 MAINTAINER Maciej Serylak "mserylak@ska.ac.za"
@@ -197,6 +197,8 @@ RUN mkdir -p /home/kat/software
 
 
 # Install python modules
+ENV PATH $PATH_PYTHON2
+ENV VIRTUAL_ENV $VIRTUAL_ENV_PYTHON2
 RUN pip install pip -U && \
     pip install setuptools -U && \
     pip install ipython -U && \
