--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,42 @@
-pkginfo==1.3.2
-six
-Cython
-h5py
-pyephem
-numpy
-
-git+ssh://git@github.com/ska-sa/katsdptelstate
-git+ssh://git@github.com/ska-sa/katsdpservices
-git+ssh://git@github.com/ska-sa/katversion
-
-katdal==0.10.1
-
-git+ssh://git@github.com/ska-sa/katpoint
-git+ssh://git@github.com/ska-sa/katversion
-git+ssh://git@github.com/ska-sa/katsdptelstate
-git+ssh://git@github.com/ska-sa/katsdpservices
-katdal==0.10.1
-pysolr==3.3.3
-requests==2.0
-
-unittest2
-traceback2
-linecache2
-ply
-nose
-mock
-funcsigs
-pbr
-singledispatch
-tornado
-katcp
+astropy==1.2.1
 backports-abc
 backports.ssl-match-hostname
-certifi
-future==0.16.0
-futures
-astropy==1.2.1
-pyfits==3.4
-
-fakeredis
-ipaddress
-netifaces
-redis
-rdbtools==0.1.12
 boto==2.48.0
-pygelf
-dask==0.17.5
-toolz==0.9.0
 botocore==1.10.16
-jmespath==0.9.3
+certifi
+dask
 docutils==0.13.1
+fakeredis
+funcsigs
+future
+futures
+h5py
+ipaddress
+jmespath==0.9.3
+katcp
+katdal==0.10.1
+linecache2
+mock
+netifaces
+nose
+numpy
+pbr
+ply
+pyephem
+pyfits==3.4
+pygelf
+pysolr==3.3.3
+rdbtools
+redis
+requests
+requests==2.0
+singledispatch
+six
+toolz
+tornado
+traceback2
+unittest2
+git+ssh://git@github.com/ska-sa/katpoint
+git+ssh://git@github.com/ska-sa/katsdpservices
+git+ssh://git@github.com/ska-sa/katsdptelstate
+git+ssh://git@github.com/ska-sa/katversion
