--- a/katsdpfilewriter/requirements.txt
+++ b/katsdpfilewriter/requirements.txt
@@ -1,25 +1,19 @@
 backports-abc
-backports.ssl-match-hostname
 certifi
 dask
-h5py
 fakeredis
-funcsigs
 future
 futures
+h5py
 katcp
 katdal==0.9.5
 katpoint==0.7
 katversion
 hiredis
 ipaddress
-linecache2
 manhole
-mock
 netifaces
-nose
 numpy
-pbr
 ply
 pyephem
 pygelf
@@ -29,9 +23,7 @@ six
 spead2
 toolz
 tornado
-traceback2
 trollius
-unittest2
 
-git+ssh://git@github.com/ska-sa/katsdpservices
-git+ssh://git@github.com/ska-sa/katsdptelstate
+git+ssh://git@github.com/ska-sa/katsdpservices#egg=katsdpservices
+git+ssh://git@github.com/ska-sa/katsdptelstate#egg=katsdptelstate
