--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pyephem
 pyfits==3.4
 pygelf
 pysolr==3.3.3
+python-dateutil
 python-lzf
 rdbtools
 redis
@@ -37,7 +38,8 @@ toolz
 tornado
 traceback2
 unittest2
-git+ssh://git@github.com/ska-sa/katpoint
-git+ssh://git@github.com/ska-sa/katsdpservices
-git+ssh://git@github.com/ska-sa/katsdptelstate
-git+ssh://git@github.com/ska-sa/katversion
+
+git+ssh://git@github.com/ska-sa/katdal#egg=katdal
+git+ssh://git@github.com/ska-sa/katpoint#egg=katpoint
+git+ssh://git@github.com/ska-sa/katsdpservices#egg=katsdpservices
+git+ssh://git@github.com/ska-sa/katsdptelstate#egg=katsdptelstate
