More fiddling around with requirements.txt

--- a/katsdpdatawriter/requirements.txt
+++ b/katsdpdatawriter/requirements.txt
@@ -1,26 +1,26 @@
 aiokatcp
 attrs==18.1.0
 certifi
-chardet
 dask
 decorator
 defusedxml
 fakeredis
 future
+h5py
 hiredis
-idna
 ipaddress
 katpoint==0.7
 katversion
 netifaces
 numpy
 pyephem
+pygelf
 redis
 requests
 six
 spead2
 toolz
 
-git+ssh://git@github.com/ska-sa/katdal#egg=katdal
+git+ssh://git@github.com/ska-sa/katdal@python3#egg=katdal
 git+ssh://git@github.com/ska-sa/katsdptelstate#egg=katsdptelstate
 git+ssh://git@github.com/ska-sa/katsdpservices#egg=katsdpservices
