Put at katdal master
The python3 branch of katdal has now been merged.

--- a/katsdpdatawriter/requirements.txt
+++ b/katsdpdatawriter/requirements.txt
@@ -24,6 +24,6 @@ spead2
 terminaltables
 toolz
 
-git+ssh://git@github.com/ska-sa/katdal@python3#egg=katdal
+git+ssh://git@github.com/ska-sa/katdal#egg=katdal
 git+ssh://git@github.com/ska-sa/katsdptelstate#egg=katsdptelstate
 git+ssh://git@github.com/ska-sa/katsdpservices#egg=katsdpservices
