--- a/katsdpdatawriter/requirements.txt
+++ b/katsdpdatawriter/requirements.txt
@@ -3,6 +3,7 @@ aiokatcp
 aiomonitor
 attrs==18.1.0
 certifi
+chardet
 dask
 decorator
 defusedxml
@@ -10,6 +11,7 @@ fakeredis
 future
 h5py
 hiredis
+idna
 ipaddress
 katpoint==0.7
 katversion
@@ -23,6 +25,7 @@ six
 spead2
 terminaltables
 toolz
+urllib3
 
 git+ssh://git@github.com/ska-sa/katdal#egg=katdal
 git+ssh://git@github.com/ska-sa/katsdptelstate#egg=katsdptelstate
