--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ backports.ssl-match-hostname
 boto==2.48.0
 botocore==1.10.16
 certifi
+chardet
 dask
 defusedxml==0.5.0
 docutils==0.13.1
@@ -12,6 +13,7 @@ funcsigs
 future
 futures
 h5py
+idna
 ipaddress
 jmespath==0.9.3
 katcp
@@ -31,13 +33,14 @@ python-dateutil==2.5.3
 python-lzf
 rdbtools
 redis
-requests==2.8.1
+requests
 singledispatch
 six
 toolz
 tornado
 traceback2
 unittest2
+urllib3
 
 git+ssh://git@github.com/ska-sa/katdal#egg=katdal
 git+ssh://git@github.com/ska-sa/katpoint#egg=katpoint
