--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ chardet
 dask
 defusedxml==0.5.0
 docutils==0.13.1
+enum34
 fakeredis
 funcsigs
 future
@@ -19,9 +20,11 @@ jmespath==0.9.3
 katcp
 katversion
 linecache2
+llvmlite
 mock
 netifaces
 nose
+numba
 numpy
 pbr
 ply
