Include botocore in katsdpdatawriter image
This will allow the data writers to write directly to an S3 repository
with authentication.

--- a/katsdpdatawriter/requirements.txt
+++ b/katsdpdatawriter/requirements.txt
@@ -3,17 +3,20 @@ aiokatcp
 aiomonitor
 async-timeout
 attrs==18.1.0
+botocore
 certifi
 chardet
 dask
 decorator
 defusedxml
+docutils
 fakeredis
 future
 h5py
 hiredis
 idna
 ipaddress
+jmespath
 katpoint==0.7
 katversion
 llvmlite
@@ -22,6 +25,7 @@ numba
 numpy
 pyephem
 pygelf
+python-dateutil
 redis
 requests
 six
