--- a/katsdpdatawriter/requirements.txt
+++ b/katsdpdatawriter/requirements.txt
@@ -3,6 +3,7 @@ aiokatcp
 aiomonitor
 async-timeout
 attrs==18.1.0
+bokeh==1.0.1
 botocore
 certifi
 chardet
@@ -16,23 +17,30 @@ h5py
 hiredis
 idna
 ipaddress
+jinja2
 jmespath
 katpoint==0.7
 katversion
 llvmlite
+markupsafe==1.0
 msgpack
 netifaces
 numba
 numpy
+packaging==18.0
+pillow==5.3.0
 pyephem
 pygelf
+pyparsing
 python-dateutil
+pyyaml==3.13
 redis
 requests
 six
 spead2
 terminaltables
 toolz
+tornado==5.1.1
 urllib3
 
 git+ssh://git@github.com/ska-sa/katdal#egg=katdal
