--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ traceback2
 unittest2
 urllib3
 
-katdal @ git+https://git@github.com/ska-sa/katdal
-katpoint @ git+https://git@github.com/ska-sa/katpoint
-katsdpservices @ git+https://git@github.com/ska-sa/katsdpservices
-katsdptelstate @ git+https://git@github.com/ska-sa/katsdptelstate
+katdal @ git+https://github.com/ska-sa/katdal
+katpoint @ git+https://github.com/ska-sa/katpoint
+katsdpservices @ git+https://github.com/ska-sa/katsdpservices
+katsdptelstate @ git+https://github.com/ska-sa/katsdptelstate
