--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,28 @@
 boto==2.48.0
-certifi # requests
-chardet # requests
-cityhash # katdal
-dask # katdal
-ephem # pyephem
-future # katdal, katpoint
-h5py # katdal
-idna # requests
+certifi                 # via requests
+chardet                 # via requests
+cityhash                # via katdal
+dask                    # via katdal
+ephem                   # via pyephem
+future                  # via katdal, katpoint
+h5py                    # via katdal
+idna                    # via requests
 katdal==0.16
 katpoint==0.9
 katsdpservices==1.0
 katsdptelstate==0.10
 katversion
-llvmlite # numba
-msgpack # katsdptelstate
-netifaces # katsdpservices, katsdptelstate
-numba # katdal
-numpy # katdal, katpoint, katsdptelstate
-pyephem # katpoint
-pygelf # katsdpservices
-pyjwt # katdal
+llvmlite                # via numba
+msgpack                 # via katsdptelstate
+netifaces               # via katsdpservices, katsdptelstate
+numba                   # via katdal
+numpy                   # via katdal, katpoint, katsdptelstate
+pyephem                 # via katpoint
+pygelf                  # via katsdpservices
+pyjwt                   # via katdal
 pysolr==3.3.3
-rdbtools # katdal
+rdbtools                # via katdal
 redis==3.4.1
-requests # pysolr
-toolz>=0.7.3 # dask[array]
-urllib3 # requests
+requests                # via pysolr
+toolz>=0.7.3            # via dask[array]
+urllib3                 # via requests
