--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,3 @@
 [build-system]
 # Minimum requirements for the build system to execute
-requires = ["setuptools", "katversion"]
+requires = ["setuptools", "wheel", "katversion"]
