--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,9 @@
+-c https://raw.githubusercontent.com/ska-sa/katsdpdockerbase/master/docker-base-build/base-requirements.txt
+
 boto==2.48.0
-certifi                 # via requests
-chardet                 # via requests
-cityhash                # via katdal
-dask                    # via katdal
-ephem                   # via pyephem
-future                  # via katdal, katpoint
-h5py                    # via katdal
-idna                    # via requests
 katdal==0.16
 katpoint==0.9
 katsdpservices==1.0
 katsdptelstate==0.10
-katversion
-llvmlite                # via numba
-msgpack                 # via katsdptelstate
-netifaces               # via katsdpservices, katsdptelstate
-numba                   # via katdal
-numpy                   # via katdal, katpoint, katsdptelstate
-pyephem                 # via katpoint
-pygelf                  # via katsdpservices
-pyjwt                   # via katdal
+numpy
 pysolr==3.3.3
-rdbtools                # via katdal
-redis==3.4.1
-requests                # via pysolr
-toolz>=0.7.3            # via dask[array]
-urllib3                 # via requests
